--- a/Projects/CustomControls/IconFont/IconFont.qrc
+++ b/Projects/CustomControls/IconFont/IconFont.qrc
@@ -1,4 +1,7 @@
 <RCC>
-    <qresource prefix="IconFont">
+    <qresource prefix="/">
+        <file>font/fontawesome-webfont.ttf</file>
+        <file>font/iconfont.ttf</file>
+        <file>font/pe-icon-set-weather.ttf</file>
     </qresource>
 </RCC>
